--- a/templates/web/location_html.phtml
+++ b/templates/web/location_html.phtml
@@ -1,36 +1,36 @@
 
 
-<option value="Aus11" <?php if ($this->locationId == "Aus11") echo '"selected="selected"'; ?>>Canberra</option>
+<option value="Aus11" <?php if ($this->locationId == "Aus11") echo 'selected="selected"'; ?>>Canberra</option>
 
 
 
-<option value="Aus21" <?php if ($this->locationId == "Aus21") echo '"selected="selected"'; ?>>Central Coast</option>
+<option value="Aus21" <?php if ($this->locationId == "Aus21") echo 'selected="selected"'; ?>>Central Coast</option>
 
 
 
-<option value="Aus22" <?php if ($this->locationId == "Aus22") echo '"selected="selected"'; ?>>Hunter Valley</option>
+<option value="Aus22" <?php if ($this->locationId == "Aus22") echo 'selected="selected"'; ?>>Hunter Valley</option>
 
 
 
-<option value="Aus23" <?php if ($this->locationId == "Aus23") echo '"selected="selected"'; ?>>Lake Macquarie</option>
+<option value="Aus23" <?php if ($this->locationId == "Aus23") echo 'selected="selected"'; ?>>Lake Macquarie</option>
 
 
 
-<option value="Aus24" <?php if ($this->locationId == "Aus24") echo '"selected="selected"'; ?>>Newcastle</option>
+<option value="Aus24" <?php if ($this->locationId == "Aus24") echo 'selected="selected"'; ?>>Newcastle</option>
 
 
 
-<option value="Aus25" <?php if ($this->locationId == "Aus25") echo '"selected="selected"'; ?>>Port Stephens</option>
+<option value="Aus25" <?php if ($this->locationId == "Aus25") echo 'selected="selected"'; ?>>Port Stephens</option>
 
 
 
-<option value="Aus26" <?php if ($this->locationId == "Aus26") echo '"selected="selected"'; ?>>Regional Nsw</option>
+<option value="Aus26" <?php if ($this->locationId == "Aus26") echo 'selected="selected"'; ?>>Regional Nsw</option>
 
 
 
-<option value="Aus27" <?php if ($this->locationId == "Aus27") echo '"selected="selected"'; ?>>South Coast</option>
+<option value="Aus27" <?php if ($this->locationId == "Aus27") echo 'selected="selected"'; ?>>South Coast</option>
 
 
 
-<option value="Aus28" <?php if ($this->locationId == "Aus28") echo '"selected="selected"'; ?>>Sydney</option>
+<option value="Aus28" <?php if ($this->locationId == "Aus28") echo 'selected="selected"'; ?>>Sydney</option>
 
