--- a/application/views/scripts/sitetemplate/_frontend.phtml
+++ b/application/views/scripts/sitetemplate/_frontend.phtml
@@ -12,6 +12,8 @@
 	<link rel="shortcut icon" href="/style/sitetemplateimage/favicon.ico" />
 
 	<script src="/scripts/jquery-1.3.2.min.js" type="text/javascript"></script>
+	<script src="/scripts/jquery.galleria.min.js" type="text/javascript"></script>
+	<script src="/scripts/photogalleysetting.js" type="text/javascript"></script>
     <script src="/scripts/refineform.js" type="text/javascript"></script>
 </head>
 <body>
