--- a/application/views/scripts/posting/index.phtml
+++ b/application/views/scripts/posting/index.phtml
@@ -17,7 +17,23 @@ $(document).ready(function() {
 		return false;
 	});
 
+
+
+
 });
+
+function showPhotoTab()
+{
+	$("ul.tabs li").removeClass("active"); //Remove any "active" class
+	var photoTab = $("ul.tabs li[tabname|=photo]");
+	$(photoTab).addClass("active"); //Add "active" class to selected tab
+	$(".tab_content").hide(); //Hide all tab content
+	var activeTab = $(photoTab).find("a").attr("href"); //Find the rel attribute value to identify the active tab + content
+	$(activeTab).fadeIn(); //Fade in the active content
+	return false;
+
+}
+
 </script>
 
 <div class="formandresultlistwrap">
