--- a/style/common.css
+++ b/style/common.css
@@ -795,10 +795,12 @@ td.imagetd a{
  }
  div.downloadwrap div.downloadbutton{
  	display:block;
- 	padding:5px 10px;
- 	background-color:red;
+ 	padding-top:8px;
+ 	padding-left:10px;
+ 	color:#000;
  	width:200px;
-  	background-image: url(../images/sitetemplate/download_arrow.png);
+ 	height:38px;
+  	background-image: url(../images/sitetemplate/downloadbutton_bg.gif);
   	background-position: 0 0;
   	background-repeat:no-repeat;
  	
