--- a/application/views/scripts/forms/_contactform.phtml
+++ b/application/views/scripts/forms/_contactform.phtml
@@ -1,5 +1,5 @@
 <?php require_once (WEBSITE_ROOT."/includes/recaptchalib.php");?>
-
+<script src="/scripts/contactformcheck.js" type="text/javascript"></script>
 
 <div class="contactformhint"><?=$this->element->hint?></div>
 
