--- a/application/views/scripts/posting/index.phtml
+++ b/application/views/scripts/posting/index.phtml
@@ -59,7 +59,7 @@ function showPhotoTab()
 	</div>
 	<div class="postingwrap">
 		<div class="postingtitle">
-			<?php echo $this->posting->getTitle()?>
+			<?php echo $this->detailTab->getTitle()?>
 		</div>
 		<div class="postingdetail">
 			<?php
