--- a/templates/emails/contact_email.phtml
+++ b/templates/emails/contact_email.phtml
@@ -34,7 +34,7 @@
 			<br />
 			Name: <?=$this->name_from?><br />
 			Email: <?=$this->email?><br />
-			Question: <?=$this->question?><br />
+			<?=$this->qestionLable?>: <?=$this->question?><br />
 		</div>
 
 	</div>
