--- a/application/views/scripts/posting/index.phtml
+++ b/application/views/scripts/posting/index.phtml
@@ -57,7 +57,7 @@ function showPhotoTab()
 	<div class="refineformwrap">
 		<?php echo $this->form->populate(Common::stdClassToArray($this->paramsHolder));?>
 	</div>
-	<div class="postingwrap">
+	<div class="postingwrap <?=$this->paramsHolder->category?>">
 		<div class="postingtitle">
 			<?php echo $this->detailTab->getTitle()?>
 		</div>
